Fix support percent gap

--- a/src/_col.scss
+++ b/src/_col.scss
@@ -1,10 +1,9 @@
 @import "internal";
 
-@mixin grid-col-internal($box-sizing, $span, $columns, $gap, $gapLocal) {
-  @if $span != null {
-    $gapAlways: if($gapLocal == null, $gap, $gapLocal);
-    width: 100% * $span / $columns - if($box-sizing == content-box and unit($gapAlways) == '%', $gapAlways * 2, 0);
-    @if $box-sizing == content-box and unit($gapAlways) != '%' {
+@mixin _grid-col-internal($box-sizing, $span, $spanCur, $columns, $gap, $gapLocal) {
+  @if $span != null or ($box-sizing == content-box and unit($gap) != '%') {
+    width: 100% * $spanCur / $columns - if($box-sizing == content-box and unit($gap) == '%', $gap * 2, 0);
+    @if $box-sizing == content-box and unit($gap) != '%' {
       box-sizing: border-box;
     }
   }
@@ -26,7 +25,13 @@
     float: left;
   }
 
+  $gapCur: 0;
+  $spanCur: null;
   @if type-of($gap) == number {
+    @if unit($gap) == '%' {
+      $gap: $gap * (100% / (100% + $gap * 2));
+      $gapCur: $gap;
+    }
     padding-left: $gap;
     padding-right: $gap;
   } @else {
@@ -42,18 +47,27 @@
       $span: nth($span, 1);
     }
     $columnsLocal: $columns !default;
+    $spanCur: if($span != null, $span, $spanCur);
 
     $gapLocal: null;
     @if type-of($gap) == map {
       $gapLocal: map-get($gap, $breakpoint);
+      @if $gapLocal != null and unit($gapLocal) == '%' {
+        $gapLocal: $gapLocal * (100% / (100% + $gapLocal * 2));
+      }
     }
+    $gapCur: if($gapLocal != null, $gapLocal, $gapCur);
 
     @if $minWidth > 0 {
       @media (min-width: $minWidth) {
-        @include grid-col-internal($box-sizing, $span, $columnsLocal, $gap, $gapLocal);
+        @include _grid-col-internal($box-sizing, $span, $spanCur, $columnsLocal, $gapCur, $gapLocal);
       }
     } @else {
-      @include grid-col-internal($box-sizing, $span, $columnsLocal, $gap, $gapLocal);
+      @include _grid-col-internal($box-sizing, $span, $spanCur, $columnsLocal, $gapCur, $gapLocal);
+    }
+
+    @if $box-sizing == content-box and unit($gapCur) != '%' {
+      $box-sizing: border-box;
     }
   }
 }
